src/app/add-product/add-product.component.scss
h3{
  padding-bottom: 2%;
  color: white;
  font-size: 2.2rem;
}

.flex-container{
  margin: 5% auto;
  padding: 4% 5%;
  background-image: url("https://www.transparenttextures.com/patterns/crossword.png");
  background-color: rgba(255, 110, 64, 0.76);
  width: 80%;
  z-index: 2;
}

.create-button{
  background-color: #1e3d59;
  background-image: url("https://www.transparenttextures.com/patterns/absurdity.png");
  color: white;
  margin-top: 8%;
}

.row{
  margin: 0 auto;
  width: 90%;
  text-align: center;
}

#abbr, #location, #length, #width{
  margin-right: 2%;
}

label{
  color: white;
  //font-weight: bold;
  margin-top: .3rem;
  font-size: 1.2rem;
}

